[package]

name = "nt_bsp"
version = "0.0.1"
authors = ["Thomas A. Steinholz <tsteinholz@protonmail.com>"]

description = "Binary Support Package for the Link Labs Network Tester"
repository = "https://github.com/tsteinholz/nt_bsp-rs"

readme = "README.md"

keywords = ["bsp", "nt"]

[dependencies.emlib]
git = "https://github.com/RustyGecko/emlib"
